--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
+  <link href="assets/css/Result.css" rel="stylesheet">
 
 </head>
 
