--- a/index.html
+++ b/index.html
@@ -911,60 +911,161 @@
 
         <p class="signup-link">Already have an account? <a href="#" id="toLogin">Login</a></p>
       </form>
+
+<!-- Forgot Password -->
+<form class="forgot-form form" id="forgotForm">
+  <h2>Forgot Password</h2>
+  <p class="subtitle">Enter your email to receive a code</p>
+
+  <div class="input-group">
+    <input type="email" id="forgotEmail" placeholder="Email Address" required>
+  </div>
+
+  <button type="button" class="login-btn" id="sendCodeBtn">Send Code</button>
+
+  <p class="signup-link">
+    <a href="#" id="backToLogin">Back to Login</a>
+  </p>
+</form>
+
+<!-- Verify Code -->
+<form class="verify-form form" id="verifyForm">
+  <h2>Verify Code</h2>
+  <p class="subtitle">Enter the code sent to your email</p>
+
+  <div class="input-group">
+    <input type="text" id="verifyCode" placeholder="Enter Code" required>
+  </div>
+
+  <button type="button" class="login-btn" id="confirmCodeBtn">Confirm Code</button>
+</form>
+
+<!-- Create New Password -->
+<form class="reset-form form" id="resetForm">
+  <h2>Create New Password</h2>
+  <p class="subtitle">Set your new password</p>
+
+  <div class="input-group">
+    <input type="password" id="newPassword" placeholder="New Password" required>
+  </div>
+
+  <div class="input-group">
+    <input type="password" id="confirmPassword" placeholder="Confirm Password" required>
+  </div>
+
+  <button type="button" class="login-btn" id="resetPasswordBtn">Reset Password</button>
+</form>
+
+
     </div>
   </div>
 
   <script>
-    const modal = document.getElementById('loginModal');
-    const openBtn = document.getElementById('openLoginModal');
-    const closeBtn = document.getElementById('closeLoginModal');
+  const modal = document.getElementById('loginModal');
+const openBtn = document.getElementById('openLoginModal');
+const closeBtn = document.getElementById('closeLoginModal');
 
-    const loginForm = document.getElementById('loginForm');
-    const signupForm = document.getElementById('signupForm');
-    const loginTab = document.getElementById('loginTab');
-    const signupTab = document.getElementById('signupTab');
+const loginForm = document.getElementById('loginForm');
+const signupForm = document.getElementById('signupForm');
+const forgotForm = document.getElementById('forgotForm');
+const verifyForm = document.getElementById('verifyForm');
+const resetForm = document.getElementById('resetForm');
 
-    const toSignup = document.getElementById('toSignup');
-    const toLogin = document.getElementById('toLogin');
+const loginTab = document.getElementById('loginTab');
+const signupTab = document.getElementById('signupTab');
 
-    // Open Modal
-    openBtn.addEventListener('click', () => {
-      modal.style.display = 'flex';
-    });
+const toSignup = document.getElementById('toSignup');
+const toLogin = document.querySelectorAll('#toLogin');
+const backToLogin = document.getElementById('backToLogin');
 
-    // Close Modal
-    closeBtn.addEventListener('click', () => {
-      modal.style.display = 'none';
-    });
+const sendCodeBtn = document.getElementById('sendCodeBtn');
+const confirmCodeBtn = document.getElementById('confirmCodeBtn');
+const resetPasswordBtn = document.getElementById('resetPasswordBtn');
 
-    window.addEventListener('click', (e) => {
-      if (e.target === modal) modal.style.display = 'none';
-    });
+// Open modal
+openBtn.addEventListener('click', () => {
+  modal.style.display = 'flex';
+});
 
-    // Toggle Forms
-    loginTab.addEventListener('click', () => {
-      loginTab.classList.add('active');
-      signupTab.classList.remove('active');
-      loginForm.classList.add('active');
-      signupForm.classList.remove('active');
-    });
+// Close modal
+closeBtn.addEventListener('click', () => {
+  modal.style.display = 'none';
+});
 
-    signupTab.addEventListener('click', () => {
-      signupTab.classList.add('active');
-      loginTab.classList.remove('active');
-      signupForm.classList.add('active');
-      loginForm.classList.remove('active');
-    });
+window.addEventListener('click', e => {
+  if (e.target === modal) modal.style.display = 'none';
+});
 
-    toSignup.addEventListener('click', (e) => {
-      // e.preventDefault();
-      signupTab.click();
-    });
+// Utility
+function hideAllForms() {
+  loginForm.classList.remove('active');
+  signupForm.classList.remove('active');
+  forgotForm.classList.remove('active');
+  verifyForm.classList.remove('active');
+  resetForm.classList.remove('active');
+}
 
-    toLogin.addEventListener('click', (e) => {
-      // e.preventDefault();
-      loginTab.click();
-    });
+// Tabs
+loginTab.addEventListener('click', () => {
+  hideAllForms();
+  loginForm.classList.add('active');
+  loginTab.classList.add('active');
+  signupTab.classList.remove('active');
+});
+
+signupTab.addEventListener('click', () => {
+  hideAllForms();
+  signupForm.classList.add('active');
+  signupTab.classList.add('active');
+  loginTab.classList.remove('active');
+});
+
+// Switch links
+toSignup.addEventListener('click', e => {
+  e.preventDefault();
+  signupTab.click();
+});
+
+toLogin.forEach(link => {
+  link.addEventListener('click', e => {
+    e.preventDefault();
+    loginTab.click();
+  });
+});
+
+// Forgot Password
+document.getElementById('toLogin').addEventListener('click', e => {
+  e.preventDefault();
+  hideAllForms();
+  forgotForm.classList.add('active');
+  loginTab.classList.remove('active');
+  signupTab.classList.remove('active');
+});
+
+// Back to login
+backToLogin.addEventListener('click', e => {
+  e.preventDefault();
+  loginTab.click();
+});
+
+// Send code
+sendCodeBtn.addEventListener('click', () => {
+  hideAllForms();
+  verifyForm.classList.add('active');
+});
+
+// Confirm code
+confirmCodeBtn.addEventListener('click', () => {
+  hideAllForms();
+  resetForm.classList.add('active');
+});
+
+// Reset password
+resetPasswordBtn.addEventListener('click', () => {
+  alert("Password successfully reset!");
+  modal.style.display = "none";
+  loginTab.click();
+});
 
 
   </script>
