--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <!-- HERO -->
     <section class="hero">
       <h1 style="color: white;"><strong>Your Next Journey with Kulunu</strong></h1>
-      <p>Flights, Road Trips, Trains & E-Tickets — all in one place.</p>
+      <p>Flights, Road Trips, & E-Tickets — all in one place.</p>
     </section>
 
     <!-- BOOKING CARD -->
